# aws-chat-agent

./: .env.example  README.md  SECURITY.md  USAGE_GUIDE.md  aws_config.yml.example  pyproject.toml  setup.py  terminal_config.yml
config/: aws_config_template.yml
docs/: ARCHITECTURE.md
examples/: basic_usage.py  file_transfer.py  profile_management.py
src/aws_agent/: __init__.py  cli.py
src/aws_agent/chat/: __init__.py  __main__.py  auth.py  profile_only_handler.py  server.py  terminal.py  websocket.py
src/aws_agent/core/: __init__.py  agent.py  graph.py  mfa_agent_executor.py  mock_agent.py  nodes.py  simple_agent.py  state.py
src/aws_agent/credentials/: __init__.py  encrypt_config.py  encryption.py  manager.py  notifying_provider.py  providers.py  simple_threaded_mfa.py
src/aws_agent/tools/: __init__.py  mfa_handler.py  mfa_wrapper.py
src/aws_agent/tools/ec2/: __init__.py
src/aws_agent/tools/lambda_tools/: __init__.py
src/aws_agent/tools/s3/: __init__.py  base.py  client_pool.py  create_bucket.py  create_directory.py  delete_object.py  download_file.py  file_transfer.py  list_buckets.py  list_objects.py  progress.py  upload_file.py  validators.py
static/: README.md
